# cppDonorSimulation

./: CMakeLists.txt  donorClass.cpp  donorClass.h  main.cpp  readme.md
donorTests/: CMakeLists.txt  basicTests.cpp
